fix overflow, correct rerender form on ci-class change

--- a/src/components/_base-components/dialog/main-dialog/style.less
+++ b/src/components/_base-components/dialog/main-dialog/style.less
@@ -48,7 +48,6 @@
                                     height: 100%;
                                     >.widget-content {
                                         background-color: @secondary-5;
-                                        overflow: hidden;
                                     }
                                 }
                             }
